# GramSwarm

./: .gitignore  README.md  analyze_pressure.py  engine.py  extract.py  james_tivendale.md  models.py  pyproject.toml  renderer.py  run.py  tools.py
readers_profiles/CasualReaders/: Marcus_Reeves.md  placeholder.md
readers_profiles/GrimdarkMoralGrey/: jg_keely.md
readers_profiles/ProfessionalReaders/: jack_edwards.md
readers_profiles/WorldbuilderEpic/: james_tivendale.md
src/gramswarm/: main.py
src/gramswarm/core/: base.py  engine.py  models.py  prompts.py  reader.py
src/gramswarm/providers/: anthropic.py
src/gramswarm/services/: analyzer.py  io.py
tests/: conftest.py  test_engine.py  test_renderer.py  test_schema.py
tests/core/: test_engine_simulation.py  test_models.py  test_prompts.py  test_reader.py
tests/fixtures/: trace_fixture.json
tests/providers/: test_anthropic_provider.py
tests/services/: test_analyzer.py  test_io.py
